<resources>
    <string name="dashed_string" translatable="false">---</string>
    <string name="models_integra" translatable="false">Onkyo/Pioneer/Integra</string>
    <string name="models_denon" translatable="false">Denon/Marantz</string>
    <string name="app_name">Enhanced Music Controller Lite</string>
    <string name="app_name_pro">Enhanced Music Controller</string>
    <string name="app_short_name">Music Control</string>
    <string name="app_description">Enhanced AVR controller: listen to music properly!</string>
    <string name="state_not_connected">Not connected</string>
    <string name="state_standby">Standby</string>
    <string name="action_exit_confirm">Press back button again to exit</string>
    <string name="action_ok">OK</string>
    <string name="action_no">No</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_default">Set default</string>
    <string name="action_context_mobile">using long click</string>
    <string name="action_context_desktop">right mouse button</string>
    <string name="about_text"><![CDATA[
    <p>Enhanced AVR Controller: listen to music properly!</p>
    <p>Copyright © 2018-2025 by <b>Mikhail Kulesh, Alexander Gomanyuk</b></p>
    <p>This app allows remote control of a Network Player or a Network A/V Receiver via the local network.
       The app supports Onkyo/Pioneer/Integra released in April 2016 or later and Denon/Marantz with build-in HEOS technology.
       Its two most popular features are music playback and sound profile management.</p>
    <p><a href="https://github.com/mkulesh/onpc">Public repository</a></p>
    <h5>License</h5>
    <p>This program is free software: you can redistribute it and/or modify it under the terms of the GNU
       General Public License as published by the Free Software Foundation, either version 3 of the License,
       or (at your option) any later version.</p>
    <p>This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
       even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
       GNU General Public License for more details. You should have received a copy of the GNU General
       Public License along with this program.</p>
    <h5>Used Open Source Libraries</h5>
    <p>&#8226; <a href="http://materialdesignicons.com">Material Design Icons</a></p>
    <p>&#8226; <a href="https://www.materialpalette.com">Material Design Palette</a></p>
    <p>&#8226; <a href="https://github.com/bauerca/drag-sort-listview">DragSortListView</a></p>
    ]]></string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_group_zone">Zone</string>
    <string name="drawer_all_standby">All Zones standby</string>
    <string name="drawer_multiroom">Group</string>
    <string name="drawer_device">Device</string>
    <string name="drawer_device_connect">Connect</string>
    <string name="drawer_device_search">Search</string>
    <string name="drawer_device_searching">Searching for compatible devices…</string>
    <string name="drawer_application">Application</string>
    <string name="drawer_tab_layout">Tab layout</string>
    <string name="drawer_app_settings">Settings</string>
    <string name="drawer_about">About</string>
    <string name="drawer_premium">Get Premium version</string>
    <string name="drawer_premium_link" translatable="false">https://play.google.com/store/apps/details?id=com.mkulesh.onpc.plus</string>
    <string name="drawer_desktop">Desktop version</string>
    <string name="drawer_desktop_link" translatable="false">https://apps.microsoft.com/detail/9p9v57cz8jg3</string>
    <string name="connect_dialog_address">Address</string>
    <string name="connect_dialog_port">Port (optional)</string>
    <string name="connect_dialog_save">Save connection</string>
    <string name="favorite_connection_edit">Edit connection</string>
    <string name="favorite_connection_identifier">MAC Address (optional)</string>
    <string name="favorite_shortcut_edit">Edit shortcut</string>
    <string name="favorite_shortcut_create">Create shortcut</string>
    <string name="favorite_shortcut_added">Shortcut added</string>
    <string name="favorite_shortcut_failed">Cannot create shortcut: navigate to the media item from the top level</string>
    <string name="favorite_shortcut_howto" formatted="false">To add shortcut: open \"%s\" tab, navigate to a media item from the top level, open context menu (%s) and select \"%s\"</string>
    <string name="favorite_copy_to_clipboard">Copy to clipboard</string>
    <string name="menu_power_standby">On/Standby</string>
    <string name="menu_receiver_information">Receiver information</string>
    <string name="menu_latest_logging">Latest logging</string>
    <string name="menu_switch_off_group">Switch off all devices in the group?</string>
    <string name="shortcut_power_on">Power On</string>
    <string name="pref_category_widget">Widget options</string>
    <string name="pref_widget_theme">Widget theme</string>
    <string name="pref_widget_transparency">Transparency</string>
    <string name="pref_category_device_options">Device options</string>
    <string name="pref_category_advanced_options">Advanced</string>
    <string name="pref_volume_title">Volume keys turning</string>
    <string name="pref_volume_summary">Use volume keys to change master volume on remote device</string>
    <string name="pref_back_as_return">Back button as \"Return\"</string>
    <string name="pref_back_as_return_summary">Use back button to switch to the parent level in the media list</string>
    <string name="pref_advanced_queue">Advanced play queue options</string>
    <string name="pref_advanced_queue_summary">Experimental: use advanced play queue features</string>
    <string name="pref_keep_playback_mode">Keep playback mode</string>
    <string name="pref_keep_playback_mode_summary">Always keep playback mode in MEDIA tab while playing</string>
    <string name="pref_exit_confirm">Press back button twice for exit</string>
    <string name="pref_keep_screen_on">Keep the screen turned on</string>
    <string name="pref_show_when_locked">On top of the lock screen</string>
    <string name="pref_show_when_locked_summary">App can start on-top of the lock screen</string>
    <string name="pref_developer_mode">Developer options</string>
    <string name="pref_device_selectors">Input selectors</string>
    <string name="pref_listening_modes">Listening modes</string>
    <string name="pref_network_services">Network services</string>
    <string name="pref_usb_ri_interface">Use USB-RI interface</string>
    <string name="pref_usb_ri_interface_none">None</string>
    <string name="pref_column_separator">Position of column separator (%)</string>
    <string name="pref_keyboard_shortcuts">Global keyboard shortcuts</string>
    <string name="pref_item_update">Edit</string>
    <string name="pref_item_delete">Delete</string>
    <string name="pref_item_name">Name</string>
    <string name="pref_auto_power">Switch-on remote device on app startup</string>
    <string name="pref_friendly_names">Friendly selector and device names</string>
    <string name="pref_friendly_names_summary_on">Use friendly names provided by remote device</string>
    <string name="pref_friendly_names_summary_off">Use build-in names</string>
    <string name="pref_force_audio_control">Audio control always available</string>
    <string name="pref_volume_unit">Master volume unit</string>
    <string name="pref_volume_unit_absolute">Absolute</string>
    <string name="pref_volume_unit_relative">Relative (dB)</string>
    <string name="pref_volume_unit_zero">Zero (0 dB) level</string>
    <string name="pref_cover_click">Album\'s cover click behaviour</string>
    <string-array name="pref_cover_click_names">
        <item>None</item>
        <item>Display mode on device</item> 
        <item>Audio muting</item>
    </string-array>
    <string name="pref_cover_click_default" translatable="false">display-mode</string>
    <string-array name="pref_cover_click_codes" translatable="false">
        <item>none</item>
        <item>display-mode</item>
        <item>audio-mute</item>
    </string-array>
    <string name="pref_sound_control">Sound control</string>
    <string-array name="pref_sound_control_names">
        <item>None</item>
        <item>External amplifier (RI)</item>
        <item>Device (Buttons)</item>
        <item>Device (Slider)</item>
        <item>Device (Buttons around Slider)</item>
        <item>Device (Buttons above Slider)</item>
        <item>Automatic</item>
    </string-array>
    <string name="pref_sound_control_default" translatable="false">device</string>
    <string-array name="pref_sound_control_codes" translatable="false">
        <item>none</item>
        <item>external-amplifier</item>
        <item>device</item>
        <item>device-slider</item>
        <item>device-btn-slider</item>
        <item>device-btn-above-slider</item>
        <item>auto</item>
    </string-array>
    <string name="pref_theme">Theme</string>
    <string-array name="pref_theme_names">
        <item>Strong Dark (Black and Lime)</item>
        <item>Dark (Dim Gray and Cyan)</item>
        <item>Dark (Dim Gray and Yellow)</item>
        <item>Light (Gray and Deep Purple)</item>
        <item>Light (Indigo and Orange)</item>
        <item>Light (Teal and Deep Orange)</item>
        <item>Light (Purple and Green)</item>
    </string-array>
    <string name="pref_theme_default" translatable="false">indigo-orange</string>
    <string-array name="pref_theme_codes" translatable="false">
        <item>black-lime</item>
        <item>dim-gray-cyan</item>
        <item>dim-gray-yellow</item>
        <item>gray-deep-purple</item>
        <item>indigo-orange</item>
        <item>teal-deep-orange</item>
        <item>purple-green</item>
    </string-array>
    <string name="pref_language">App language</string>
    <string-array name="pref_language_names">
        <item>System language</item>
        <item>English</item>
        <item>Français</item>
        <item>Русский</item>
        <item>Deutsch</item>
        <item>Polski</item>
    </string-array>
    <string name="pref_language_default" translatable="false">system</string>
    <string-array name="pref_language_codes" translatable="false">
        <item>system</item>
        <item>en</item>
        <item>fr</item>
        <item>ru</item>
        <item>de</item>
        <item>pl</item>
    </string-array>
    <string name="pref_text_size">Text and buttons size</string>
    <string-array name="pref_text_size_names">
        <item>System size</item>
        <item>Small</item>
        <item>Normal</item>
        <item>Big</item>
        <item>Huge</item>
    </string-array>
    <string name="pref_text_size_default" translatable="false">system</string>
    <string-array name="pref_text_size_codes" translatable="false">
        <item>system</item>
        <item>small</item>
        <item>normal</item>
        <item>big</item>
        <item>huge</item>
    </string-array>
    <string name="pref_visible_tabs">Visible tabs</string>
    <string name="cmd_description_setup">Setup</string>
    <string name="cmd_description_return">Return</string>
    <string name="cmd_description_menu">Menu</string>
    <string name="cmd_track_menu">Track menu</string>
    <string name="medialist_playback_mode">Playback mode</string>
    <string name="playlist_add">Add</string>
    <string name="playlist_add_and_play">Add and play</string>
    <string name="playlist_replace">Replace</string>
    <string name="playlist_replace_and_play">Replace and play</string>
    <string name="playlist_remove">Remove item</string>
    <string name="playlist_remove_all">Remove all</string>
    <string name="playlist_move_from">Move from</string>
    <string name="playlist_move_to">Move to</string>
</resources>