<?xml version="1.0" encoding="utf-8"?><!--
  ~ Enhanced Music Controller
  ~ Copyright (C) 2018-2022 by Mikhail Kulesh
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU
  ~ General Public License as published by the Free Software Foundation, either version 3 of the License,
  ~ or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
  ~ even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details. You should have received a copy of the GNU General
  ~ Public License along with this program.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/playlist_menu_replace_and_play"
        android:title="@string/playlist_replace_and_play" />
    <item
        android:id="@+id/playlist_menu_add"
        android:title="@string/playlist_add" />
    <item
        android:id="@+id/playlist_menu_replace"
        android:title="@string/playlist_replace" />
    <item
        android:id="@+id/playlist_menu_add_and_play"
        android:title="@string/playlist_add_and_play" />
    <item
        android:id="@+id/playlist_menu_remove"
        android:title="@string/playlist_remove" />
    <item
        android:id="@+id/playlist_menu_remove_all"
        android:title="@string/playlist_remove_all" />
    <item
        android:id="@+id/playlist_menu_move_from"
        android:title="@string/playlist_move_from" />
    <item
        android:id="@+id/playlist_menu_move_to"
        android:title="@string/playlist_move_to" />
    <item
        android:id="@+id/playlist_track_menu"
        android:title="@string/cmd_track_menu" />

    <item
        android:id="@+id/cmd_dcp_replace_and_play"
        android:title="@string/playlist_replace_and_play" />
    <item
        android:id="@+id/cmd_dcp_add_to_end"
        android:title="@string/playlist_add" />

    <item
        android:id="@+id/cmd_playback_mode"
        android:title="@string/medialist_playback_mode" />
    <item
        android:id="@+id/cmd_shortcut_create"
        android:title="@string/favorite_shortcut_create" />
</menu>
