<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019. Mikhail Kulesh
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU
  ~ General Public License as published by the Free Software Foundation, either version 3 of the License,
  ~ or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
  ~ even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details. You should have received a copy of the GNU General
  ~ Public License along with this program.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/drawer_device_id"
        android:title="@string/drawer_device"
        android:orderInCategory="1">
        <menu>
            <item
                android:id="@+id/drawer_device_search"
                android:icon="@drawable/drawer_search"
                android:orderInCategory="0"
                android:title="@string/drawer_device_search" />
            <item
                android:id="@+id/drawer_device_connect"
                android:icon="@drawable/drawer_connect"
                android:orderInCategory="1"
                android:title="@string/drawer_device_connect" />
        </menu>
    </item>

    <item
        android:id="@+id/drawer_group_zone_id"
        android:title="@string/drawer_group_zone"
        android:orderInCategory="2">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/drawer_zone_1"
                    android:icon="@drawable/drawer_zone_1"
                    android:orderInCategory="0"
                    android:title="@string/dashed_string" />
                <item
                    android:id="@+id/drawer_zone_2"
                    android:icon="@drawable/drawer_zone_2"
                    android:orderInCategory="1"
                    android:title="@string/dashed_string" />
                <item
                    android:id="@+id/drawer_zone_3"
                    android:icon="@drawable/drawer_zone_3"
                    android:orderInCategory="2"
                    android:title="@string/dashed_string" />
                <item
                    android:id="@+id/drawer_zone_4"
                    android:icon="@drawable/drawer_zone_4"
                    android:orderInCategory="3"
                    android:title="@string/dashed_string" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/drawer_multiroom"
        android:title="@string/drawer_multiroom"
        android:orderInCategory="3">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/drawer_multiroom_1"
                    android:icon="@drawable/multiroom_device_0"
                    android:orderInCategory="0"
                    android:title="@string/dashed_string" />
                <item
                    android:id="@+id/drawer_multiroom_2"
                    android:icon="@drawable/multiroom_device_1"
                    android:orderInCategory="1"
                    android:title="@string/dashed_string" />
                <item
                    android:id="@+id/drawer_multiroom_3"
                    android:icon="@drawable/multiroom_device_2"
                    android:orderInCategory="2"
                    android:title="@string/dashed_string" />
                <item
                    android:id="@+id/drawer_multiroom_4"
                    android:icon="@drawable/multiroom_device_3"
                    android:orderInCategory="3"
                    android:title="@string/dashed_string" />
                <item
                    android:id="@+id/drawer_multiroom_5"
                    android:icon="@drawable/multiroom_device_4"
                    android:orderInCategory="4"
                    android:title="@string/dashed_string" />
                <item
                    android:id="@+id/drawer_multiroom_6"
                    android:icon="@drawable/multiroom_device_5"
                    android:orderInCategory="5"
                    android:title="@string/dashed_string" />
            </group>
        </menu>
    </item>

    <item
        android:title="@string/drawer_device_application"
        android:orderInCategory="4">
        <menu>
            <item
                android:id="@+id/drawer_app_settings"
                android:icon="@drawable/drawer_app_settings"
                android:title="@string/drawer_app_settings" />
            <item
                android:id="@+id/drawer_about"
                android:icon="@drawable/drawer_about"
                android:title="@string/drawer_about" />
        </menu>
    </item>

</menu>
