<?xml version="1.0" encoding="utf-8"?><!--
  ~ Enhanced Music Controller
  ~ Copyright (C) 2018-2023 by Mikhail Kulesh
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU
  ~ General Public License as published by the Free Software Foundation, either version 3 of the License,
  ~ or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
  ~ even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details. You should have received a copy of the GNU General
  ~ Public License along with this program.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_power_standby"
        android:icon="@drawable/menu_power_standby"
        android:title="@string/menu_power_standby"
        android:enabled="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_receiver_information"
        android:title="@string/menu_receiver_information"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_latest_logging"
        android:title="@string/menu_latest_logging"
        android:visible="false"
        app:showAsAction="never" />
</menu>
