<?xml version="1.0" encoding="utf-8"?><!--
  ~ Enhanced Music Controller
  ~ Copyright (C) 2018-2023 by Mikhail Kulesh
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU
  ~ General Public License as published by the Free Software Foundation, either version 3 of the License,
  ~ or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
  ~ even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details. You should have received a copy of the GNU General
  ~ Public License along with this program.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="?dialogPreferredPadding"
    android:paddingRight="?dialogPreferredPadding"
    android:paddingTop="16dp"
    android:paddingBottom="0dp">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatRadioButton
                style="@style/RadioButtonStyle"
                android:id="@+id/connect_models_integra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/models_integra"
                android:checked="false" />

            <androidx.appcompat.widget.AppCompatRadioButton
                style="@style/RadioButtonStyle"
                android:id="@+id/connect_models_denon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/models_denon"
                android:checked="false" />

            <TextView
                style="@style/EditFieldCaptionStyle"
                android:text="@string/connect_dialog_address" />

            <androidx.appcompat.widget.AppCompatEditText
                style="@style/PrimaryTextViewStyle"
                android:id="@+id/device_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minWidth="300dp"
                android:inputType="text"
                android:focusable="true" />

            <TextView
                style="@style/EditFieldCaptionStyle"
                android:text="@string/connect_dialog_port" />

            <androidx.appcompat.widget.AppCompatEditText
                style="@style/PrimaryTextViewStyle"
                android:id="@+id/device_port"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minWidth="300dp"
                android:inputType="text"
                android:focusable="true" />

            <LinearLayout
                android:id="@+id/tone_direct_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="?dialogPreferredPadding">

                <CheckBox
                    android:id="@+id/checkbox_device_save"
                    style="@style/SecondaryTextViewStyle"
                    android:gravity="left|center_vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/connect_dialog_save" />

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/PrimaryTextViewStyle"
                    android:id="@+id/device_friendly_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="300dp"
                    android:inputType="text"
                    android:focusable="true"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>