<?xml version="1.0" encoding="utf-8"?><!--
  ~ Enhanced Music Controller
  ~ Copyright (C) 2018-2023 by Mikhail Kulesh
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU
  ~ General Public License as published by the Free Software Foundation, either version 3 of the License,
  ~ or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
  ~ even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details. You should have received a copy of the GNU General
  ~ Public License along with this program.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="?dialogPreferredPadding"
    android:paddingRight="?dialogPreferredPadding"
    android:paddingTop="16dp"
    android:paddingBottom="0dp">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/SecondaryTextViewStyle"
                android:id="@+id/favorite_connection_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="?dialogPreferredPadding">

                <androidx.appcompat.widget.AppCompatRadioButton
                    style="@style/RadioButtonStyle"
                    android:id="@+id/favorite_connection_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/pref_item_update"
                    android:checked="true" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="30dp">

                    <TextView
                        style="@style/EditFieldCaptionStyle"
                        android:text="@string/pref_item_name" />

                    <androidx.appcompat.widget.AppCompatEditText
                        style="@style/PrimaryTextViewStyle"
                        android:id="@+id/favorite_connection_alias"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="300dp"
                        android:inputType="text"
                        android:focusable="true" />

                    <TextView
                        style="@style/EditFieldCaptionStyle"
                        android:text="@string/favorite_connection_identifier" />

                    <androidx.appcompat.widget.AppCompatEditText
                        style="@style/PrimaryTextViewStyle"
                        android:id="@+id/favorite_connection_identifier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="300dp"
                        android:inputType="text"
                        android:focusable="true" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="?dialogPreferredPadding">

                <androidx.appcompat.widget.AppCompatRadioButton
                    style="@style/RadioButtonStyle"
                    android:id="@+id/favorite_connection_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:gravity="center_vertical"
                    android:text="@string/pref_item_delete" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>