<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019. Mikhail Kulesh
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU
  ~ General Public License as published by the Free Software Foundation, either version 3 of the License,
  ~ or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
  ~ even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details. You should have received a copy of the GNU General
  ~ Public License along with this program.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mkulesh.onpc.MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:id="@+id/remote_control_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Common line -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Menu -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/SecondaryTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cmd_description_menu" />

                    <android.support.v7.widget.AppCompatImageButton
                        style="@style/BigImageButtonStyle"
                        android:tag="NTC:MENU" />
                </LinearLayout>

                <!-- Settings -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/SecondaryTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cmd_description_setup" />

                    <android.support.v7.widget.AppCompatImageButton
                        style="@style/BigImageButtonStyle"
                        android:tag="OSD:MENU" />
                </LinearLayout>

                <!-- Return -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/SecondaryTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cmd_description_return" />

                    <android.support.v7.widget.AppCompatImageButton
                        style="@style/BigImageButtonStyle"
                        android:tag="OSD:EXIT" />
                </LinearLayout>
            </LinearLayout>

            <!-- Cursor block -->
            <View style="@style/HorizontalDividerStyle" />

            <!-- Up -->
            <android.support.v7.widget.AppCompatImageButton
                style="@style/BigImageButtonStyle"
                android:tag="OSD:UP" />

            <!-- Left, Select, Right -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageButton
                    style="@style/BigImageButtonStyle"
                    android:tag="OSD:LEFT" />

                <android.support.v7.widget.AppCompatImageButton
                    style="@style/BigImageButtonStyle"
                    android:tag="OSD:ENTER" />

                <android.support.v7.widget.AppCompatImageButton
                    style="@style/BigImageButtonStyle"
                    android:tag="OSD:RIGHT" />
            </LinearLayout>

            <!-- Down -->
            <android.support.v7.widget.AppCompatImageButton
                style="@style/BigImageButtonStyle"
                android:tag="OSD:DOWN" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>